using Prism.Events;

namespace CommonUI.Events
{
    public class JednostkiUpdatedEvent : PubSubEvent
    {
    }
}
