using Prism.Events;

namespace CommonUI.Events
{
    public class MarynarzUpdatedEvent : PubSubEvent
    {
    }
}
