using CommonUI.Models;
using Prism.Events;

namespace CommonUI.Events
{
    public class SelectedMarynarzEvent : PubSubEvent<Marynarz>
    {
    }
}
