using Prism.Events;

namespace CommonUI.Events
{
    public class ZalogiUpdatedEvent : PubSubEvent
    {
    }
}
